--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,3 +1,675 @@
+@import url("https://fonts.cdnfonts.com/css/gilroy-bold");
+.gap-0 {
+  gap: 0rem;
+}
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-6 {
+  gap: 1.5rem;
+}
+
+.gap-7 {
+  gap: 1.75rem;
+}
+
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-9 {
+  gap: 2.25rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-11 {
+  gap: 2.75rem;
+}
+
+.gap-12 {
+  gap: 3rem;
+}
+
+.gap-13 {
+  gap: 3.25rem;
+}
+
+.gap-14 {
+  gap: 3.5rem;
+}
+
+.gap-15 {
+  gap: 3.75rem;
+}
+
+.gap-16 {
+  gap: 4rem;
+}
+
+.gap-17 {
+  gap: 4.25rem;
+}
+
+.gap-18 {
+  gap: 4.5rem;
+}
+
+.gap-19 {
+  gap: 4.75rem;
+}
+
+.gap-20 {
+  gap: 5rem;
+}
+
+.gap-21 {
+  gap: 5.25rem;
+}
+
+.gap-22 {
+  gap: 5.5rem;
+}
+
+.gap-23 {
+  gap: 5.75rem;
+}
+
+.gap-24 {
+  gap: 6rem;
+}
+
+.gap-25 {
+  gap: 6.25rem;
+}
+
+.gap-26 {
+  gap: 6.5rem;
+}
+
+.gap-27 {
+  gap: 6.75rem;
+}
+
+.gap-28 {
+  gap: 7rem;
+}
+
+.gap-29 {
+  gap: 7.25rem;
+}
+
+.gap-30 {
+  gap: 7.5rem;
+}
+
+.gap-31 {
+  gap: 7.75rem;
+}
+
+.gap-32 {
+  gap: 8rem;
+}
+
+.gap-33 {
+  gap: 8.25rem;
+}
+
+.gap-34 {
+  gap: 8.5rem;
+}
+
+.gap-35 {
+  gap: 8.75rem;
+}
+
+.gap-36 {
+  gap: 9rem;
+}
+
+.gap-37 {
+  gap: 9.25rem;
+}
+
+.gap-38 {
+  gap: 9.5rem;
+}
+
+.gap-39 {
+  gap: 9.75rem;
+}
+
+.gap-40 {
+  gap: 10rem;
+}
+
+.gap-41 {
+  gap: 10.25rem;
+}
+
+.gap-42 {
+  gap: 10.5rem;
+}
+
+.gap-43 {
+  gap: 10.75rem;
+}
+
+.gap-44 {
+  gap: 11rem;
+}
+
+.gap-45 {
+  gap: 11.25rem;
+}
+
+.gap-46 {
+  gap: 11.5rem;
+}
+
+.gap-47 {
+  gap: 11.75rem;
+}
+
+.gap-48 {
+  gap: 12rem;
+}
+
+.gap-49 {
+  gap: 12.25rem;
+}
+
+.gap-50 {
+  gap: 12.5rem;
+}
+
+.gap-51 {
+  gap: 12.75rem;
+}
+
+.gap-52 {
+  gap: 13rem;
+}
+
+.gap-53 {
+  gap: 13.25rem;
+}
+
+.gap-54 {
+  gap: 13.5rem;
+}
+
+.gap-55 {
+  gap: 13.75rem;
+}
+
+.gap-56 {
+  gap: 14rem;
+}
+
+.gap-57 {
+  gap: 14.25rem;
+}
+
+.gap-58 {
+  gap: 14.5rem;
+}
+
+.gap-59 {
+  gap: 14.75rem;
+}
+
+.gap-60 {
+  gap: 15rem;
+}
+
+.gap-61 {
+  gap: 15.25rem;
+}
+
+.gap-62 {
+  gap: 15.5rem;
+}
+
+.gap-63 {
+  gap: 15.75rem;
+}
+
+.gap-64 {
+  gap: 16rem;
+}
+
+.gap-65 {
+  gap: 16.25rem;
+}
+
+.gap-66 {
+  gap: 16.5rem;
+}
+
+.gap-67 {
+  gap: 16.75rem;
+}
+
+.gap-68 {
+  gap: 17rem;
+}
+
+.gap-69 {
+  gap: 17.25rem;
+}
+
+.gap-70 {
+  gap: 17.5rem;
+}
+
+.gap-71 {
+  gap: 17.75rem;
+}
+
+.gap-72 {
+  gap: 18rem;
+}
+
+.gap-73 {
+  gap: 18.25rem;
+}
+
+.gap-74 {
+  gap: 18.5rem;
+}
+
+.gap-75 {
+  gap: 18.75rem;
+}
+
+.gap-76 {
+  gap: 19rem;
+}
+
+.gap-77 {
+  gap: 19.25rem;
+}
+
+.gap-78 {
+  gap: 19.5rem;
+}
+
+.gap-79 {
+  gap: 19.75rem;
+}
+
+.gap-80 {
+  gap: 20rem;
+}
+
+.gap-81 {
+  gap: 20.25rem;
+}
+
+.gap-82 {
+  gap: 20.5rem;
+}
+
+.gap-83 {
+  gap: 20.75rem;
+}
+
+.gap-84 {
+  gap: 21rem;
+}
+
+.gap-85 {
+  gap: 21.25rem;
+}
+
+.gap-86 {
+  gap: 21.5rem;
+}
+
+.gap-87 {
+  gap: 21.75rem;
+}
+
+.gap-88 {
+  gap: 22rem;
+}
+
+.gap-89 {
+  gap: 22.25rem;
+}
+
+.gap-90 {
+  gap: 22.5rem;
+}
+
+.gap-91 {
+  gap: 22.75rem;
+}
+
+.gap-92 {
+  gap: 23rem;
+}
+
+.gap-93 {
+  gap: 23.25rem;
+}
+
+.gap-94 {
+  gap: 23.5rem;
+}
+
+.gap-95 {
+  gap: 23.75rem;
+}
+
+.gap-96 {
+  gap: 24rem;
+}
+
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h1 strong {
+  font-family: inter !important;
+}
+
+*,
+*::after,
+*::after {
+  text-decoration: none;
+  font-family: Gilroy-Regular;
+  list-style: none;
+}
+
+::-webkit-scrollbar {
+  width: 3px;
+  background-color: rgba(11, 29, 38, 0);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+}
+
+body {
+  background: #0b1d26;
+  color: #fff;
+  margin-block: auto;
+  --bs-gutter-x: 0 !important;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  min-height: 100dvh;
+  min-height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(/BG.png);
+  background-position: top;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #0b1d26;
+}
+
+.navbar {
+  --bs-bg-opacity: 0;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), transparent);
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: auto;
+  height: 70px;
+}
+
+.nav-bar-link {
+  width: 100%;
+}
+
+.account-icon {
+  height: 18px;
+}
+
+.nav-links a,
+.nav-account span,
+.navbar-brand {
+  font-size: small;
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.nav-links a {
+  margin-left: 8px;
+}
+
+:is(.nav-links a, .nav-account span, .brand):hover {
+  color: #fff;
+  text-decoration: underline;
+  text-underline-offset: 10px;
+}
+
+.navbar-brand {
+  font-size: larger;
+}
+
+.navbar-nav {
+  flex-grow: 1;
+}
+
+.navbar-collapse {
+  width: fit-content;
+  flex-grow: 0;
+  flex-basis: unset;
+}
+
+.hero {
+  min-height: 75dvh;
+  min-height: 75vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+  object-fit: cover;
+}
+
+.hero-content {
+  max-width: 100vw;
+}
+
+.main-bg {
+  position: absolute;
+  z-index: -1;
+  object-fit: cover;
+}
+
+.hero > div > span:nth-child(1)::before {
+  content: " ";
+  display: block;
+  height: 2px;
+  width: 60px;
+  margin-block: auto;
+  background: #fbd784;
+  margin-right: 1rem;
+}
+
+.hero > div > span:nth-child(1) {
+  color: #fbd784;
+  font-family: Gilroy-Bold;
+}
+
+.hero span hr {
+  width: 100px;
+}
+
+.hero p {
+  max-width: 25ch;
+}
+
+.featured {
+  background: #0b1d26;
+  min-height: 100vh;
+  margin-top: 400px;
+  padding-top: 50px;
+  padding-bottom: 150px;
+}
+
+.featured > section {
+  margin-top: 200px;
+  gap: 5rem;
+}
+
+.featured > section:nth-child(odd) {
+  margin-top: 200px;
+  flex-direction: row-reverse;
+}
+
+.featured > section > img {
+  width: 30%;
+  min-width: 300px;
+  height: 400px;
+}
+
+.section-text-content {
+  width: 40%;
+  min-width: 300px;
+}
+
+.section-text-content span:nth-child(1) > span {
+  top: -70px;
+  left: -70px;
+  z-index: 1;
+  color: rgba(255, 255, 255, 0.3);
+  font-family: Gilroy-Bold;
+  font-size: 120px;
+  font-weight: 600;
+}
+
+@media screen and (max-width: 830px) {
+  body {
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(/MobileBG.png);
+    background-position: top;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: #0b1d26;
+  }
+  .navbar-nav {
+    flex-grow: 0;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #0b1d26;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: fit-content;
+  }
+  .navbar-nav .navbar-brand {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    align-items: flex-start;
+    padding: 5rem;
+  }
+  .hero {
+    min-height: fit-content;
+    flex-wrap: wrap;
+  }
+  .hero .hero-content {
+    gap: 2rem !important;
+  }
+  .hero > .scroller {
+    display: none;
+  }
+  .hero > .follow-links {
+    display: none;
+  }
+  .nav-account-text {
+    display: none;
+  }
+}
+footer {
+  align-items: flex-start;
+  justify-content: center;
+  gap: 1rem;
+  width: 100%;
+  padding: 1rem 2rem;
+  flex-wrap: wrap;
+  max-width: 100vw;
+}
+footer > div > ul {
+  display: flex;
+  gap: 1rem;
+}
+footer > div > ul > li > a {
+  text-decoration: none;
+}
+footer > div > ul > li:nth-child(1) {
+  color: #fbd784 !important;
+  font-size: 1.2rem;
+}
+@media (max-width: 760px) {
+  footer {
+    padding: 1rem auto;
+    align-items: center;
+    justify-content: flex-start;
+  }
+}
+footer * {
+  max-width: 500px;
+  box-sizing: border-box;
+}
+footer > * {
+  width: 200px;
+  flex-shrink: 1;
+}
+footer .footer-brand {
+  width: auto;
+  flex-grow: 0;
+  flex-shrink: 0 !important;
+  max-width: 90%;
+}
+footer .footer-brand .footer-brand-name {
+  font-size: 30px;
+  text-decoration: none;
+}
+footer .footer-brand .footer-brand-name:hover {
+  color: #fff;
+  text-decoration: underline;
+  text-underline-offset: 10px;
+}
+footer a {
+  color: #fff !important;
+}
+footer a:hover {
+  color: #fff;
+  text-decoration: underline;
+  text-underline-offset: 10px;
+}
+footer a .active {
+  color: #fff;
+  text-decoration: underline;
+  text-underline-offset: 10px;
+}
 
 /*# sourceMappingURL=footer.css.map */
